--- a/test_instructions/MouselabExplanation.html
+++ b/test_instructions/MouselabExplanation.html
@@ -9,7 +9,7 @@ Practical information
     <br><br>
     The decision screen in part 1 looks similair to the decision screen that you have just seen. 
     <br><br>  
-    The only difference is that in part 1 the numbers will be covered with a block. In order to see the number underneath the block, you need to hover over the blok with your mouse. 
+    The only difference is that in part 1 the numbers will be covered with a block. In order to see the number underneath the block, you need to hover over the block with your mouse. 
     <br><br>
     You can only submit an answer if you have hovered over at least one of the blocks. 
     <br><br>
