--- a/test_instructions/InstructionsSECO.html
+++ b/test_instructions/InstructionsSECO.html
@@ -36,9 +36,9 @@
     <br> 
     The other participants in this study are not human, but computers. 
     We ran the same study at the University of Amsterdam in March 2022. 
-    In this study, 4 real people were matched with another and did the same study. 
-    Based on this study, we programmed the 3 participants you are matched with. 
-    The behavior of these other participants also depends on your own behavior.
+    In this study, 4 real people were matched and did the same study. 
+    Based on these participants' behavior, we programmed 3 computerized participants you are matched with.  
+    This also means that your behavior might affect the behavior of the computerized participants.
     <br><br>
     
     <b> The forest </b>
