--- a/test_survey/EmotionsDuring.html
+++ b/test_survey/EmotionsDuring.html
@@ -5,9 +5,32 @@
 
     <p>
         The following list consists of words that describe different feelings and emotions. Read each item and indicate to what extent you have felt this way <strong> during part 1 of the experiment </strong>.
+  
+
+    <table class="table">
+        <tr>
+            <tr>
+                <td> . </td>
+                <td>Very slightly or not at all </td>
+                <td> A little </td>
+                <td> Moderately </td>
+                <td>Quite a bit </td>
+                <td>Extremely </td>
+            </tr>
+
+        {{ for field in form }}
+            <tr></tr>
+                <th>{{ field.label }}</th>
+                
+                {{ for choice in field }}
+                <td>{{ choice }}</td>
+                {{ endfor }}
+            </tr>
+        {{ endfor }}
+      
+    </table>
     </p>
     <br><br>
-    {{ formfields }}
     {{ next_button }}
 
 {{ endblock }}
