--- a/test_survey/EndGameEco.html
+++ b/test_survey/EndGameEco.html
@@ -9,6 +9,8 @@
     <br> <br>
     In total, you cut down: {{ player.participant.trees_player_total}} trees.
     <br><br>
+    If the forest died, the trees cut down in the last round did not give you any points. 
+    <br><br>
     Eco-label status: {{ player.participant.eco_status }}.
     <br><br>
     Total points: {{ player.participant.points_player_total }}.
