--- a/test_instructions/ControlQuestion.html
+++ b/test_instructions/ControlQuestion.html
@@ -4,7 +4,7 @@ Control Question
 
 {{ block content }}
 
-Before we move on to the instructions: please select the second option of the answer possibilities below. In case you answer this question wrong you will be redirected to the end of this experiment and not receive any payment. 
+Before we move on to the instructions we have to check if you are not a bot. Please select option 2 of the answer possibilities below. In case you answer this question wrong you will be redirected to the end of the experiment and not receive any payment. 
 <br><br>
 {{ formfield 'bot_question' }} 
 <br><br>
