--- a/test_survey/Decision_info_eco.html
+++ b/test_survey/Decision_info_eco.html
@@ -17,7 +17,7 @@ Decision questionnaire
     Imagine the co-label would have multiplied the points earned for each tree you cut down. 
     This multiplier could earn you more (above 1) or earn you less (below 1) per tree. 
     <br><br>
-    Example 1: having an eco-label would have increased the pionts per tree to 1.25 points per tree. 
+    Example 1: having an eco-label would have increased the points per tree to 1.25 points per tree. 
     <br><br>
     Example 2: having an eco-label would have decreased the points per tree to 0.75.
     <br><br>
