--- a/test_survey/OtherPlayer.html
+++ b/test_survey/OtherPlayer.html
@@ -13,7 +13,7 @@ Reaction to deviators{{ endblock }}
                 <td> Very inappropriate </td>
                 <td> Somewhat inappropriate  </td>
                 <td> Somewhat appropriate </td>
-                <td> Very appropriate </td>
+                <td> Very inappropriate </td>
                 <td> Extremely inappropriate </td>
             </tr>
             <tr>
