--- a/test_instructions/InstructionsSECO.html
+++ b/test_instructions/InstructionsSECO.html
@@ -22,7 +22,7 @@
 <p>
     Please read the instructions carefully before you start. The payment you receive at the end of the study depends on your choices.
     The whole study consists of two parts: part 1 is described below and payment relevant, part 2 consists of questionnaires.
-    In addition to the points that you earn from part 1, you also earn <b>X Euros</b> as a participation fee.
+    In addition to the points that you earn from part 1, you also earn <b>1.55 POUNDS </b> as a participation fee.
     
     <br><br>
     <h4>Part 1</h4>
@@ -53,9 +53,9 @@
     <br>
     In each round, you and the other computerized participants decide individually on how many trees you want to cut down from the common forest.
     You have the option to cut down <b>in between 0 and 20 trees per round</b>. The trees you cut down are equal to the points you earn and will be converted into your profit at the end.
-    <b>Every tree cut down equals 1 point </b>. Each point is worth 10 cents, which leads to the following conversion rate:
+    <b>Every tree cut down equals 1 point </b>. Each point is worth 0.03 pounds, which leads to the following conversion rate:
     <br><br>
-                <b>1 point = 0.10 Euros</b> (10 Points = 1 Euro)
+                <b>1 point = 0.03 Pounds</b> (10 Points = 0.3 pounds)
     <br><br>
     During this part, you have the opportunity to earn an eco-label! Your production must be sustainable to earn the eco-label.
     If you cut down 10 or fewer trees <b>in every round</b>, your production is considered sustainable. 
@@ -69,7 +69,7 @@
     <br><br>
     <b> Left-over trees</b>
     <br>
-    For every 10 trees left in the forest at the end of the study, we will plant one tree in real life. 
+    For every 30 trees left in the forest at the end of the study, we will plant one tree in real life (= after 100 people participated). 
     <br><br>
     <b> Decision Screen</b>
     <br>
