--- a/test_survey/EndGameEco.html
+++ b/test_survey/EndGameEco.html
@@ -15,7 +15,7 @@
     <br><br>
     Total points: {{ player.participant.points_player_total }}.
     <br><br>
-    Total profit: {{ player.participant.profit_player_total }} EUR.
+    Total profit (which is your bonus payment): {{ player.participant.profit_player_total }} POUNDS.    
     <br><br>
     There are {{ player.participant.forest }} trees left in the forest. 
     <br><br>
