--- a/test_survey/FuneralQuestion.html
+++ b/test_survey/FuneralQuestion.html
@@ -3,7 +3,7 @@ Reaction to others {{ endblock }}
 {{ block content }}
 
     <p>
-        Imagine: One player constantly takes 20 trees and behaves unsustainable. Therefore, violating the normative behaviour! Please rate the appropriateness of the following reactions:     </p>
+        Imagine a funeral. One of the guests (Guest A) wears headphones, apparently listening to music during the ceremony.
 
         <table class="table">
 
