--- a/test_instructions/InstructionsControl.html
+++ b/test_instructions/InstructionsControl.html
@@ -66,7 +66,7 @@
     <br><br>
     <b> Left-over trees</b>
     <br>
-    For every 30 trees left in the forest at the end of the study, we will plant one tree in real life (= after 100 people participated). 
+    For every 30 trees left in the forest at the end of the study, we will plant one tree in real life. This means, that the remaining trees of every participant across the study will be added together, and we will then plant trees in real life accordingly.
     <br><br>
     <b> Decision Screen</b>
     <br>
@@ -90,7 +90,7 @@
 <br>
 <h3>Are the instructions clear?</h3>
 <p>
-    To check whether you read and understood the instructions, please answer in the following questions.You can only proceed once you answered all questions correctly.
+    To check whether you read and understood the instructions, please answer in the following questions. You can only proceed once you answered all questions correctly.
     <br>
     {{ formfield 'forest' }}
     {{ formfield 'regrowth' }}
