--- a/test_instructions/InstructionsSECO.html
+++ b/test_instructions/InstructionsSECO.html
@@ -69,7 +69,7 @@
     <br><br>
     <b> Left-over trees</b>
     <br>
-    For every 30 trees left in the forest at the end of the study, we will plant one tree in real life (= after 100 people participated). 
+    For every 30 trees left in the forest at the end of the study, we will plant one tree in real life. This means, that the remaining trees of every participant across the study will be added together, and we will then plant trees in real life accordingly. 
     <br><br>
     <b> Decision Screen</b>
     <br>
