--- a/test_instructions/Welcome.html
+++ b/test_instructions/Welcome.html
@@ -30,7 +30,7 @@
 
         <br><br>
         This study consists of a two parts: the experiment and the concluding questionnaire.
-        The whole experiment takes approximately 15 minutes to complete.
+        The whole experiment takes about 15 minutes to complete.
 
         <br><br>
         The outcomes of this study may be used only for scientific purposes and will not be shared with any third parties.
