--- a/test_survey/FuneralQuestion.html
+++ b/test_survey/FuneralQuestion.html
@@ -3,7 +3,7 @@ Reaction to others {{ endblock }}
 {{ block content }}
 
     <p>
-        Imagine a funeral. One of the guests (Guest A) wears headphones, apparently listening to music during the ceremony.
+        Imagine a funeral. One of the guests (Guest A) wears headphones, apparently listening to music during the ceremony. Please rate the appropriateness of the following reactions (after the ceremony):
 
         <table class="table">
 
@@ -13,8 +13,8 @@ Reaction to others {{ endblock }}
                 <td> Very inappropriate </td>
                 <td> Somewhat inappropriate  </td>
                 <td> Somewhat appropriate </td>
-                <td> Very inappropriate </td>
-                <td> Extremely inappropriate </td>
+                <td> Very appropriate </td>
+                <td> Extremely appropriate </td>
             </tr>
             <tr>
                 
