--- a/test_survey/Thankyou.html
+++ b/test_survey/Thankyou.html
@@ -4,12 +4,14 @@
 
 {{ block content }}
     <p>
-        Thank you for participating in this study! This is the end of the experiment.
+        Thank you for participating in this study! This is the end of the experiment. Please copy the following completion code and fill it out in Prolific. 
+        <br> <br>
+        Completion code:<b> 3C1F4AF4</b>
         <br><br>
-        If you have any questions or remarks, please contact Imke van der Loo
+        If you have any questions or remarks, you can contact Imke van der Loo
         (i.vanderloo@student.maastrichtuniversity.nl).
         <br><br>
-        You can now close this browser.
+        If you have copied the completion code, you can now close this browser.
     </p>
 {{ endblock }}
 
