--- a/test_survey/Decision_info_eco.html
+++ b/test_survey/Decision_info_eco.html
@@ -14,7 +14,7 @@ Decision questionnaire
 <br><br>
 <p>
     In this study you earned 1 point per tree. 
-    Imagine the co-label would have multiplied the points earned for each tree you cut down. 
+    Imagine the eco-label would have multiplied the points earned for each tree you cut down. 
     This multiplier could earn you more (above 1) or earn you less (below 1) per tree. 
     <br><br>
     Example 1: having an eco-label would have increased the points per tree to 1.25 points per tree. 
