--- a/test_survey/OtherPlayer.html
+++ b/test_survey/OtherPlayer.html
@@ -13,8 +13,8 @@ Reaction to others {{ endblock }}
                 <td> Very inappropriate </td>
                 <td> Somewhat inappropriate  </td>
                 <td> Somewhat appropriate </td>
-                <td> Very inappropriate </td>
-                <td> Extremely inappropriate </td>
+                <td> Very appropriate </td>
+                <td> Extremely appropriate </td>
             </tr>
             <tr>
                 
