--- a/test_instructions/Exit.html
+++ b/test_instructions/Exit.html
@@ -8,7 +8,12 @@ Exit Experiment
 <p>
     <br><br>
     You have been directed to the end of the experiment, as you did not answer the control question correctly. 
-    You will not receive any payment for this experiment and can close this tab now. 
+    You will not receive any payment for this experiment.
+    Please copy the following completion code and fill it out in Prolific. 
+        <br> <br>
+        Completion code:<b> 3C1F4AF4</b> 
+    <br><br>
+    If you have copied the code, you can close the tab now. 
     <br><br>
 </p>
 
