new session commit

--- a/test_instructions/ExampleEcoIT.html
+++ b/test_instructions/ExampleEcoIT.html
@@ -19,7 +19,7 @@ Practice Round (normally the round number is here)
     <br><br>
     </tr>
     <tr>
-    Eco-label still possible?: yes
+    Eco-label status: earned
     <br><br><br>
     </tr>
     <tr>
