--- a/test_crsd/DecisionEcoIT.html
+++ b/test_crsd/DecisionEcoIT.html
@@ -11,31 +11,31 @@
     <br><br><br>
     </tr>
     <tr>
-    Total trees you cut down: <button type="button" class="r1 mousy button-outcome hidden" id="trees_p"> {{ player.participant.trees_player_total }} </button>
+    Total trees you cut down: {{ player.participant.trees_player_total }}  
     <br><br>
     </tr>
     <tr>
-    Total points you have earned: <button type="button" class="r1 mousy button-outcome hidden" id="points_p"> {{ player.participant.points_player_total }} </button>
+    Total points you have earned:  {{ player.participant.points_player_total }}  
     <br><br>
     </tr>
     <tr>
-    Eco-label still possible?: <button type="button" class="r1 mousy button-outcome hidden" id="eco_p"> {{ player.participant.eco_status }}  </button>
+    Eco-label status:  {{ player.participant.eco_status }}   
     <br><br><br>
     </tr>
     <tr>
-    Total trees the group (including yourself) cut down: <button type="button" class="r1 mousy button-outcome hidden" id="trees_gr"> {{ player.participant.trees_group_total }} </button>
+    Total trees the group (including yourself) cut down: {{ player.participant.trees_group_total }} 
     <br><br>
     </tr>
     <tr>
-    Total points of the group (including yourself): <button type="button" class="r1 mousy button-outcome hidden" id="points_gr"> {{ player.participant.points_group_total }} </button>
+    Total points of the group (including yourself):  {{ player.participant.points_group_total }} 
     <br><br>
     </tr>
     <tr>
-    Total number of eco-labels in the group (including yourself): <button type="button" class="r1 mousy button-outcome hidden" id="eco_gr"> {{ player.participant.eco_labels_total }} </button>
+    Total number of eco-labels in the group (including yourself):  {{ player.participant.eco_labels_total }}  
     <br><br><br>
     </tr>
     <tr>
-    Trees left in the common forest: <button type="button" class="r1 mousy button-outcome hidden" id="forest"> {{ player.participant.forest }} </button>
+    Trees left in the common forest:  {{ player.participant.forest }} 
     </tr>
 
 </table>
@@ -43,22 +43,4 @@
 
 {{formfield 'trees_player_round'}}
 {{ next_button }}
-{{ endblock }}
-
-{{ block scripts }}
-<script>
-    
-    document.addEventListener("DOMContentLoaded", function(debug=true) {
-    InitializeVT(document.getElementsByClassName('otree-body')[0]);
-    // Convert all buttons with the class 'clickable' into click VT buttons
-    ConvertButtons2VT('clickable',sActivation='click');
-    // Convert all buttons with the class 'mousy' into mouseover VT buttons
-    ConvertButtons2VT('mousy',sActivation='mouseover');
-    // Convert all buttons with the class 'row' into click VT buttons that activate outcome-buttons with the class 'r1'
-    ConvertButtons2VT('row',sActivation='click', 'r1');
-});
-</script>
-<link href="{% static 'global/VT_functionality.css' %}" rel="stylesheet">
-<script src="{% static 'global/VT_functionality2.js' %}"></script>
-
 {{ endblock }}
