--- a/test_instructions/ExampleScreen.html
+++ b/test_instructions/ExampleScreen.html
@@ -9,7 +9,7 @@ Example Screen
     <br><br>
     On the next screen, you can get familiar with the decision screen.
     <br><br>  
-    The screen will look similair to the decision screen in round 1. 
+    The screen will look similar to the decision screen in round 1. 
     <br> <br>
     Again, the next screen is not the real decision screen yet, but a practice.
     <br><br>
